# Frenchrs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: apt_example.rs  capm_dataframe.rs  capm_example.rs  carhart_example.rs  complete_comparison.rs  fama_french_example.rs  fama_macbeth_example.rs  grs_test_example.rs  hj_distance_example.rs  ivol_tracking_multi_example.rs  model_comparison.rs  oos_performance_example.rs  residual_correlation_example.rs  residual_diagnostics_example.rs  risk_analysis.rs  rolling_multi_assets.rs
src/: apt.rs  capm.rs  carhart.rs  fama_french_3f.rs  fama_french_5f.rs  fama_french_6f.rs  fama_macbeth.rs  grs_test.rs  hj_distance.rs  ivol_tracking_multi.rs  lib.rs  oos_performance.rs  residual_correlation.rs  residual_diagnostics.rs  risk_metrics.rs  rolling_betas_multi.rs
tests/: apt_tests.rs  capm_tests.rs  carhart_tests.rs  fama_french_6f_tests.rs  fama_french_tests.rs  ivol_tracking_multi_tests.rs  risk_metrics_tests.rs
