[package]
name = "frenchrs"
version = "0.1.0"
edition = "2024"
authors = ["Frenchrs Contributors"]
license = "GPL-3.0-or-later"
description = "Biblioteca Rust de alto desempenho para precificação de ativos (CAPM, Fama-French, etc)"
keywords = ["finance", "capm", "asset-pricing", "econometrics", "fama-french"]
categories = ["science", "finance"]
repository = "https://github.com/yourusername/frenchrs"

# [build]
# rustflags = ["-C", "target-cpu=native"]

[lib]
name = "frenchrs"
path = "src/lib.rs"

[dependencies]
greeners = "1.3.2"
ndarray = "0.17.1"
statrs = "0.18.0"

[profile.release]
opt-level = 3
lto = true
