[package]
name = "frenchrs"
version = "0.1.0"
edition = "2021"
authors = ["Frenchrs Contributors"]
license = "GPL-3.0-or-later"
description = "A high-performance Rust library for asset pricing and financial analysis, built on the robust econometric infrastructure of [Greeners](https://crates.io/crates/greeners)."
keywords = ["finance", "capm", "asset-pricing", "econometrics", "fama-french", "apt"]
categories = ["science", "finance"]
repository = "https://github.com/sheep-farm/Frenchrs"

# [build]
# rustflags = ["-C", "target-cpu=native"]

[lib]
name = "frenchrs"
path = "src/lib.rs"

[dependencies]
greeners = "1.3.2"
ndarray = "0.17.1"
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
statrs = "0.18.0"

[profile.release]
opt-level = 3
lto = true
